# pedros

./: README.md  REVIEW_REPORT.md  pyproject.toml
.github/workflows/: python-publish.yml
src/pedros/: __init__.py  __main__.py  logger.py  progbar.py  progress_bar.py  timed.py
src/pedros/decorators/: safe.py  timed.py  universal_decorator.py
src/pedros/utils/: progbar.py
tests/test_pedro/: test_decorator_factory.py  test_has_dep.py  test_integration.py  test_performance.py  test_progbar.py  test_progress_bar.py  test_property_based.py
tests/unit/: test_safe_decorator.py  test_timed_decorator.py
