[project]
name = "pedros"
version = "0.0.1"
description = "Small utility package for my projects."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Pierre LAPOLLA"}
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
