[project]
name = "pedros"
version = "0.0.2"
description = "Small utility package for my projects."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Pierre LAPOLLA"}
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    "wrapt>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.1.1",
]
